# aocpp22

./: CMakeLists.txt  CMakePresets.json  README.md  aocpp22.code-workspace  target.cpp
app/: CMakeLists.txt  day_1.cpp  day_1.hpp  day_10.cpp  day_10.hpp  day_12.cpp  day_12.hpp  day_4.cpp  day_4.hpp  day_5.cpp  day_5.hpp  utils.cpp  utils.hpp
inputs/: .10_ex_long.txt.kate-swp  10_hot.txt  day_5_dock.txt
test/: CMakeLists.txt
test/app/: CMakeLists.txt  test_app_day_1.cpp  test_app_day_10.cpp  test_app_day_12.cpp  test_app_day_4.cpp  test_app_day_5.cpp
